--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,4 +1,6 @@
-h1{
-    font-family: verdana;
-    color:white;
+#pulsante_premuto{
+    background-color:red;
+    border: solid 1px #000000;
+    width: 10px;
+    height: 10px;
 }
