--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -19,3 +19,13 @@ p{
     font-family: "Russo One";
     color:white;
 }
+.contenitore{
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
